# coursework

./: .gitignore  compressed_equations.tex  equations.ipynb  equations.py  equations.tex  linear.json  prev.json
coursework/: coursework.tex  cw.sty
kozlov/: CMakeLists.txt  prog_copy.cpp
report/: practice.sty  practice.tex
